update localization & tooltip guide

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -293,6 +293,49 @@
   "gift_course": "Gift course",
   "gift_membership": "Gift membership",
   "growth": "Growth levels",
+  "guide_refferal_contest_name": "The referral contest name should be concise and appealing so participants can easily recognize it.",
+  "guide_refferal_contest_code": "Typically, it will be the contest name in Vietnamese without accents, separated by hyphens. You can also customize it as desired.",
+  "guide_refferal_contest_status": "Ensure the contest is activated (public). You can also hide the contest as desired.",
+  "guide_refferal_contest_duration": "The start and end time of the contest will determine the period during which people can participate.",
+  "guide_news_category_name": "The name should be concise, accurately reflecting the content to help readers understand the topic of the articles in this category.",
+  "guide_news_title": "The title should be brief and engaging to capture the main content effectively for SEO, helping readers quickly understand the topic and decide if the article is relevant to them.",
+  "guide_news_keywords": "Keywords should be individual words or phrases separated by commas, making your article easier to find on search engines, positively impacting SEO.",
+  "guide_news_status": "If enabled, the article will be publicly accessible to reach readers. If disabled, the article will be hidden.",
+  "guide_news_description": "The description should be concise, engaging, and relevant to the content, summarizing key points and highlighting important information to attract readers and positively impact SEO. An appropriate length is around 120-150 characters.",
+  "guide_news_content": "Content should be comprehensive, clear, and easy to understand. You can break it into sections, use headings, and add detailed information to make the article more engaging and useful to readers.",
+  "guide_news_display_page": "This is where the article will be displayed.",
+  "guide_event_name": "The event name should be concise, easy to understand, and accurately reflect the content and purpose of the event to increase its appeal.",
+  "guide_event_time": "Ensure the event time is accurate so participants can arrange their schedules accordingly.",
+  "guide_event_status": "If enabled, the event will be public, and others can join. If disabled, the event will be hidden.",
+  "guide_event_avatar": "The image should be clear, related to the event, and visually appealing to attract participants' attention.",
+  "guide_event_location": "The event location should be complete and accurate to help participants access it easily.",
+  "guide_event_link": "The registration link should be correct, ideally starting with https:// for easy access and registration by participants.",
+  "guide_event_description": "The event description can include the main content, objectives, and highlights. This information will help participants better understand the event and attract interest.",
+  "guide_testimonial_job_title": "Enter the official job title of the testimonial provider, e.g., Manager, Employee, CEO.",
+  "guide_testimonial_type": "Select the type of person providing the testimonial.",
+  "guide_membership_tier_name": "The tier name should be short and easy to recognize to differentiate between membership levels.",
+  "guide_membership_badge": "Upload an image representing the membership level. This image should be recognizable and reflect the meaning of the level.",
+  "guide_membership_popular": "Enable this switch if you want to mark this membership level as popular, accessible, and suitable for most customers.",
+  "guide_membership_status": "If enabled, this membership level will be accessible for users and available for registration. If disabled, this level will be temporarily hidden and will not accept new registrations.",
+  "guide_membership_content": "The package content includes a brief description or a list of perks that the holder will enjoy upon registration.",
+  "guide_membership_price_policy": "This is where you configure the pricing for each subscription duration for the membership level. Ensure you enter reasonable pricing for each period.",
+  "guide_membership_indirect_refferal": "This is the commission percentage when a referred person introduces additional people to the membership tier.",
+  "guide_membership_direct_refferal": "This is the commission percentage when someone directly refers another person to join the membership tier.",
+  "guide_membership_max_absences": "This is the duration (in days) a member can be inactive on the system. If exceeded, they will be marked as INACTIVE.",
+  "guide_membership_settlement_date": "From 1 to 30. This is the fixed date each month when the system will process the settlement.",
+  "guide_membership_perks": "List the special perks or benefits that users in this perk group will receive.",
+  "guide_forum_name": "Choose a short, memorable name that clearly reflects the purpose of the forum.",
+  "guide_forum_status": "Enable or disable the forum to control member access.",
+  "guide_community_category_name": "Enter the category name to organize content in the community or forum. This helps arrange topics and makes it easier for users to find related content.",
+  "guide_community_category_description": "Enter a short description for the category to provide detailed information about the content it includes. This description helps users understand the topics discussed in this category.",
+  "guide_community_name": "This will be the official name displayed to all members and visitors, helping everyone recognize the community.",
+  "guide_community_pinned": "If enabled, this community will remain at the top of the list, even when new communities are added.",
+  "guide_community_featured": "If enabled, this community will be specially marked, standing out more and attracting viewers.",
+  "guide_community_description": "Enter a brief description of your community to help users easily understand its purpose and main topic. This description will provide an overview, attracting interested users.",
+  "guide_customer_name": "Enter the customer's full name for accurate identification and management of their information.",
+  "guide_customer_email": "Enter a valid email format (e.g., example@domain.com) to send notifications, invoices, and provide customer support as needed.",
+  "guide_customer_phone": "Enter the customer's phone number for contact when needed (including the area code if required).",
+  "guide_price_list_category_name": "The name should be concise and clear to help organize the price list effectively for easy tracking.",
   "guide_ckeditor": "If using HTML code, follow these 3 steps:",
   "guide_ckeditor_step_1": "Step 1: Click the HTML Code button",
   "guide_ckeditor_step_2": "Step 2: Paste the HTML code here",
@@ -529,6 +572,7 @@
   "partial_paid": "Partial paid",
   "participation": "Privilege of Participation",
   "partner": "Partner",
+  "partners": "Partners",
   "partner_course_reports": "Partner course reports",
   "partner_courses": "Partner courses",
   "partner_management": "Partner management",
@@ -888,5 +932,21 @@
   "zalo_group_link": "Zalo group link",
   "zalo_messages_sent": "Sent messages on Zalo",
   "zoom_id": "ID of Zoom room",
-  "zoom_link": "Zoom Link"
+  "zoom_link": "Zoom Link",
+  "course_overview": "Course Overview",
+  "course_level": "Course Level",
+  "has_certificate": "Has Certificate",
+  "certificate_image": "Certificate Image",
+  "special_courses": "Special Courses",
+  "accumulated_points": "Accumulated Points",
+  "old_price_lifetime": "Old Price (Lifetime)",
+  "old_price_30_days": "Old Price (30 Days)",
+  "old_price_90_days": "Old Price (90 Days)",
+  "old_price_180_days": "Old Price (180 Days)",
+  "old_price_365_days": "Old Price (365 Days)",
+  "price_lifetime": "Price (Lifetime)",
+  "price_30_days": "Price (30 Days)",
+  "price_90_days": "Price (90 Days)",
+  "price_180_days": "Price (180 Days)",
+  "price_365_days": "Price (365 Days)"
 }
