--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -293,6 +293,50 @@
   "gift_course": "Tặng khóa học",
   "gift_membership": "Tặng gói thành viên",
   "growth": "Tăng trưởng",
+  "guide_refferal_contest_name": "Tên cuộc thi giới thiệu nên ngắn gọn và hấp dẫn để người tham gia có thể dễ dàng nhận biết.",
+  "guide_refferal_contest_status": "Hãy đảm bảo rằng cuộc thi đã được kích hoạt (công khai). Bạn cũng có thể ẩn cuộc thi tuỳ theo ý muốn",
+  "guide_refferal_contest_duration": "Thời gian bắt đầu & kết thúc cuộc thi sẽ giúp xác định khoảng thời gian mà mọi người có thể tham gia",
+  "guide_news_category_name": "Tên nên ngắn gọn, phản ánh chính xác nội dung và giúp người đọc hiểu rõ hơn về chủ đề của các bài viết trong danh mục này.",
+  "guide_news_category_status": "Nếu bật, danh mục sẽ được hiển thị công khai. Nếu tắt, danh mục sẽ bị ẩn đi",
+  "guide_news_title": "Tiêu đề nên ngắn gọn, hấp dẫn về nội dung chính để có tác động tốt tới SEO, giúp người đọc nhanh chóng hiểu được chủ đề & quyết định xem bài viết có phù hợp họ hay không.",
+  "guide_news_keywords": "Đây sẽ là những từ hoặc cụm từ được ngăn cách nhau bằng dấu phẩy, giúp bài viết của bạn dễ dàng được tìm thấy trên các công cụ tìm kiếm, tác động tốt tới SEO",
+  "guide_news_status": "Nếu bật, bài viết sẽ xuất hiện công khai để tiếp cận độc giả. Nếu tắt, bài viết sẽ bị ẩn đi.",
+  "guide_news_description": "Mô tả cần ngắn gọn, hấp dẫn liên quan tới nội dung, tóm tắt được những điểm chính & thông tin quan trọng để thu hút người đọc, tác động tốt tới SEO. Độ dài thích hợp là khoảng 120 - 150 kí tự.",
+  "guide_news_content": "Nội dung cần đầy đủ, rõ ràng, và dễ hiểu. Bạn có thể chia thành các đoạn, sử dụng tiêu đề, và thêm các thông tin chi tiết để bài viết trở nên hấp dẫn và hữu ích cho người đọc.",
+  "guide_news_display_page": "Đây là nơi mà bài viết sẽ được hiển thị",
+  "guide_event_name": "Tên sự kiện cần ngắn gọn, dễ hiểu, phản ánh chính xác nội dung và mục đích của sự kiện để tăng tính thu hút",
+  "guide_event_time": "Đảm bảo rằng thời gian của sự kiện chính xác để người tham gia có thể sắp xếp lịch trình hợp lý.",
+  "guide_event_status": "Nếu bật, sự kiện sẽ được công khai, người khác sẽ có thể tham gia. Nếu tắt sự kiện sẽ bị ẩn đi",
+  "guide_event_avatar": "Hình ảnh nên rõ nét, có liên quan đến sự kiện và hấp dẫn để thu hút sự chú ý của người tham gia",
+  "guide_event_location": "Địa điểm của sự kiện cần phải đầy đủ và chính xác giúp người tham gia dễ dàng tiếp cận",
+  "guide_event_link": "Đường dẫn đăng ký cần phải chính xác, nên bắt đầu bằng https:// nếu có thể, giúp người tham gia dễ dàng truy cập & đăng ký",
+  "guide_event_description": "Mô tả của sự kiện có thể bao gồm nội dung chính, mục tiêu & các điểm nổi bật. Thông tin này sẽ giúp người tham gia hiểu rõ hơn về sự kiện & thu hút sự quan tâm.",
+  "guide_testimonial_job_title": "Nhập chức danh chính thức của người chứng thực. VD: Quản lý, Nhân viên, CEO,...",
+  "guide_testimonial_type": "Chọn loại đối tượng cho người đã đưa ra lời chứng thực",
+  "guide_membership_tier_name": "Tên hạng thành viên nên ngắn gọn, dễ nhận biết và để phân biệt",
+  "guide_membership_badge": "Tải lên hình ảnh biểu tượng cho cấp độ thành viên. Hình ảnh này nên dễ nhận biết & thể hiện đúng ý nghĩa của hạng",
+  "guide_membership_popular": "Bật nút này nếu bạn muốn đánh dấu rằng đây là hạng thành viên phổ biến, dễ tiếp cận, phù hợp với đại đa số khách hàng",
+  "guide_membership_status": "Nếu bật, hạng thành viên này sẽ được người dùng tiếp cận & có thể được đăng ký. Nếu tắt, hạng thành viên này sẽ tạm thời bị ẩn đi & sẽ không tiếp nhận đăng ký mới",
+  "guide_membership_content": "Nội dung gói bao gồm mô tả ngắn gọn hoặc danh sách các quyền lợi mà người sở hữu sẽ được hưởng khi đăng ký",
+  "guide_membership_price_policy": "Đây là nơi cấu hình mức giá cho từng khoảng thời hạn sử dụng/đăng ký tham gia hạng thành viên. Hãy chú ý điền mức giá cho từng khoảng thời hạn sao cho hợp lý",
+  "guide_membership_indirect_refferal": "Là % hoa hồng khi một người được đã được giới thiệu lại tiếp tục giới thiệu thêm người khác tham gia hạng thành viên.",
+  "guide_membership_direct_refferal": "Là % hoa hồng khi ai đó giới thiệu một người khác tham gia hạng thành viên",
+  "guide_membership_max_absences":"Đây là khoảng thời gian (tính theo ngày) khi mà người tham gia hạng thành viên không có tương tác bất kì trên hệ thống. Nếu vượt quá sẽ bị đánh dấu là KHÔNG HOẠT ĐỘNG",
+  "guide_membership_settlement_date": "Có thể điền bất kỳ từ 1 đến 30. Đây là ngày cố định hàng tháng mà hệ thống sẽ thực hiện kết toán",
+  "guide_membership_description": "Nhập mô tả ngắn gọn và đầy đủ về tư cách thành viên, giúp người dùng hiểu rõ những quyền lợi, ưu đãi, hoặc yêu cầu của hạng thành viên này.",
+  "guide_membership_perks": "Liệt kê các quyền lợi hoặc ưu đãi đặc biệt mà người dùng sẽ được hưởng trong nhóm quyền lợi này",
+  "guide_forum_name": "Nên chọn tên ngắn gọn, dễ nhớ và thể hiện rõ mục đích của diễn đàn",
+  "guide_forum_status": "Bật hoặc tắt diễn đàn, kiểm soát quyền truy cập của thành viên",
+  "guide_community_category_name": "Nhập tên danh mục để phân loại nội dung trong cộng đồng hoặc diễn đàn. Đây là cách để tổ chức các chủ đề và giúp người dùng dễ dàng tìm thấy nội dung liên quan.",
+  "guide_community_category_description": "Nhập mô tả ngắn gọn cho danh mục để cung cấp thông tin chi tiết về nội dung mà danh mục này bao gồm. Mô tả sẽ giúp người dùng hiểu rõ hơn về các chủ đề và nội dung được thảo luận trong danh mục này.",
+  "guide_community_name": "Đây sẽ là tên chính thức được hiển thị cho tất cả thành viên và người truy cập, giúp mọi người dễ dàng nhận diện cộng đồng.",
+  "guide_community_pinned": "Nếu bật, cộng đồng này sẽ được giữ ở đầu danh sách, ngay cả khi thêm một cộng đồng khác mới hơn",
+  "guide_community_featured": "Nếu bật, cộng đồng này sẽ được đánh dấu đặc biệt, nổi bật hơn, dễ thu hút người xem.",
+  "guide_community_description": "Nhập mô tả ngắn gọn về cộng đồng của bạn để người dùng dễ dàng hiểu mục tiêu và chủ đề chính. Mô tả này sẽ cung cấp cái nhìn tổng quan về cộng đồng, thu hút người dùng quan tâm.",
+  "guide_customer_name": "Nhập tên đầy đủ của khách hàng để xác định và quản lý thông tin khách hàng một cách chính xác.",
+  "guide_customer_email": "Nhập email theo định dạng hợp lệ (ví dụ: example@domain.com) để gửi thông báo, hóa đơn, và hỗ trợ khách hàng khi cần",
+  "guide_customer_phone": "Nhập số điện thoại của khách hàng để liên lạc khi cần thiết (gồm mã vùng nếu cần)",
+  "guide_price_list_category_name": "Tên cần ngắn gọn, xúc tích để giúp tổ chức bảng giá một cách rõ ràng & dễ theo dõi.",
   "guide_ckeditor": "Nếu sử dụng mã code html, hãy làm theo 3 bước sau:",
   "guide_ckeditor_step_1": "B1: bạn cần ấn vào nút Mã HTML",
   "guide_ckeditor_step_2": "B2: dán vào đây đoạn mã HTML",
@@ -489,7 +533,6 @@
   "notification_email": "Email thông báo",
   "notification_email_list": "Danh sách email thông báo",
   "notification_emails": "Email thông báo",
-  "old_price": "Giá cũ",
   "ongoing_lesson": "Buổi đang dạy",
   "opening_class": "Lớp đang mở",
   "operation": "Vận hành",
@@ -529,6 +572,7 @@
   "partial_paid": "Thanh toán một phần",
   "participation": "Quyền tham gia",
   "partner": "Đối tác",
+  "partners": "Đối tác",
   "partner_course_reports": "Báo cáo khóa học cộng tác viên",
   "partner_courses": "Khóa học cộng tác viên",
   "partner_management": "Quản lý CTV",
@@ -888,5 +932,22 @@
   "zalo_group_link": "Đường dẫn nhóm zalo",
   "zalo_messages_sent": "Đã gửi tin nhắn Zalo",
   "zoom_id": "ID phòng Zoom",
-  "zoom_link": "Link Zoom"
+  "zoom_link": "Link Zoom",
+  "course_overview": "Tổng quan khoá học",
+  "course_level": "Cấp độ khoá học",
+  "has_certificate": "Có chứng chỉ",
+  "certificate_image": "Ảnh chứng chỉ",
+  "special_courses": "Khoá học đặc biệt",
+  "accumulated_points": "Điểm tích luỹ",
+  "old_price": "Giá cũ",
+  "old_price_lifetime": "Giá cũ thời hạn vĩnh viễn",
+  "old_price_30_days": "Giá cũ thời hạn 30 ngày",
+  "old_price_90_days": "Giá cũ thời hạn 90 ngày",
+  "old_price_180_days": "Giá cũ thời hạn 180 ngày",
+  "old_price_365_days": "Giá cũ thời hạn 365 ngày",
+  "price_lifetime": "Giá thời hạn vĩnh viễn",
+  "price_30_days": "Giá thời hạn 30 ngày",
+  "price_90_days": "Giá thời hạn 90 ngày",
+  "price_180_days": "Giá thời hạn 180 ngày",
+  "price_365_days": "Giá thời hạn 365 ngày"
 }
