hotfix: remove unused sidebar

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -954,5 +954,5 @@
   "zoom_id": "ID phòng Zoom",
   "zoom_link": "Link Zoom",
   "homepage_link": "Đường dẫn trang chủ",
-  "elearning_ui_configuration": "Cấu hình giao diện E-learning"
+  "elearning_ui_configuration": "Cấu hình giao diện"
 }
