hotfix: remove max score in forum conf detail

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -953,7 +953,9 @@
   "zoom_link": "Zoom Link",
   "guide_news_category_status": "If enabled, the category will be displayed publicly. If disabled, the category will be hidden.",
   "guide_membership_description": "Enter a short and comprehensive description of the membership, helping users understand the benefits, privileges, or requirements of this membership tier.",
-  "guide_forum_favicon": "This image appears at the top of each tab in the browser as a representative logo for the forum page."
+  "guide_forum_favicon": "This image appears at the top of each tab in the browser as a representative logo for the forum page.",
   "homepage_link": "Homepage Link",
-  "elearning_ui_configuration": "E-learning UI Configuration"
+  "elearning_ui_configuration": "E-learning UI Configuration",
+  "comment": "Comment",
+  "article_reaction": "Article reaction"
 }
